Less and less broken xrefs

--- a/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.GenerateDigest_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IBaseCardService/pages/IBaseCardService.GenerateDigest_MT.adoc
@@ -19,7 +19,7 @@ baseCard:::
 Карточка
 
 cardData:::
-Тип: `xref:Platform-ObjectManager:IXmlExportable_IN.adoc[IXmlExportable]`
+Тип: `xref:Platform-ObjectManager-IXmlExportable:IXmlExportable_IN.adoc[IXmlExportable]`
 +
 Данные карточки
 
