--- a/modules/Platform-ObjectManager-ExportCard/pages/ExportCardInspector.AfterExportRow_MT.adoc
+++ b/modules/Platform-ObjectManager-ExportCard/pages/ExportCardInspector.AfterExportRow_MT.adoc
@@ -14,6 +14,6 @@ public virtual void AfterExportRow(RowData rowData)
 
 Параметры::
 rowData:::
-Тип: `xref:Platform-ObjectManager:RowData_CL.adoc[RowData]`
+Тип: `xref:Platform-ObjectManager-Row:RowData_CL.adoc[RowData]`
 +
 Строка секции
