--- a/modules/Platform-ObjectManager-Metadata/pages/ObjectManager_NS.adoc
+++ b/modules/Platform-ObjectManager-Metadata/pages/ObjectManager_NS.adoc
@@ -24,7 +24,7 @@
 |`xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]` |Содержит данные карточки.
 |`xref:Platform-ObjectManager-CardData:CardDataCollection_CL.adoc[CardDataCollection]` |Предоставляет методы для работы с коллекцией `CardData`.
 |`xref:Platform-ObjectManager-CardData:CardLabelCollection_CL.adoc[CardLabelCollection]` |Представляет коллекцию меток карточек.
-|`xref:Platform-ObjectManager:CardManager_CL.adoc[CardManager]` |Представляет объектную модель *менеджера карточек*. Содержит методы чтение, изменение, создание и удаление карточек.
+|`xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[CardManager]` |Представляет объектную модель *менеджера карточек*. Содержит методы чтение, изменение, создание и удаление карточек.
 |`xref:Platform-ObjectManager-CardManager:Connection_CL.adoc[Connection]` |Соединение с сервером {dv}.
 |`DigestViewColumns` |Представляет колонку в представление.
 |`xref:Platform-ObjectManager-ExportCard:ExportCardErrorEventArgs_CL.adoc[ExportCardErrorEventArgs]` |Предоставляет данные для события `xref:Platform-ObjectManager-ExportCard:ExportCardInspector.Error_EV.adoc[ExportCardInspector.Error]`
@@ -47,22 +47,22 @@
 |`xref:Platform-ObjectManager-LogManager:LogSearchQuery_CL.adoc[LogSearchQuery]` |Представляет фильтр данных для журнала.
 |`xref:Platform-ObjectManager-Report:QueryParameter_CL.adoc[QueryParameter]` |Предоставляет хранилище для параметров запроса.
 |`xref:Platform-ObjectManager-Report:QueryParameterCollection_CL.adoc[QueryParameterCollection]` |Содержит методы для работы с коллекцией `QueryParameter`.
-|`xref:Platform-ObjectManager:Report_CL.adoc[Report]` |Представляет данные для хранимой процедуры.
-|`xref:Platform-ObjectManager:ReportCollection_CL.adoc[ReportCollection]` |Содержит методы для работы с коллекцией `Report`.
-|`xref:Platform-ObjectManager:ReportManager_CL.adoc[ReportManager]` |Представляет объектную модель _менеджера хранимых процедур_.
-|`xref:Platform-ObjectManager:ReportParameter_CL.adoc[ReportParameter]` |Осуществляет хранение параметров хранимых процедур.
-|`xref:Platform-ObjectManager:ReportParameterCollection_CL.adoc[ReportParameterCollection]` |Содержит методы для работы с коллекцией `ReportParameter`.
-|`xref:Platform-ObjectManager:RowData_CL.adoc[RowData]` |Представляет строку данных карточки.
-|`xref:Platform-ObjectManager:RowDataCollection_CL.adoc[RowDataCollection]` |Содержит методы для работы с коллекцией `RowData`.
-|`xref:Platform-ObjectManager:RowField_CL.adoc[RowField]` |Описывает поле секции карточки.
-|`xref:Platform-ObjectManager:RowFieldCollection_CL.adoc[RowFieldCollection]` |Содержит методы для работы с коллекцией `RowField`.
+|`xref:Platform-ObjectManager-Report:Report_CL.adoc[Report]` |Представляет данные для хранимой процедуры.
+|`xref:Platform-ObjectManager-Report:ReportCollection_CL.adoc[ReportCollection]` |Содержит методы для работы с коллекцией `Report`.
+|`xref:Platform-ObjectManager-Report:ReportManager_CL.adoc[ReportManager]` |Представляет объектную модель _менеджера хранимых процедур_.
+|`xref:Platform-ObjectManager-Report:ReportParameter_CL.adoc[ReportParameter]` |Осуществляет хранение параметров хранимых процедур.
+|`xref:Platform-ObjectManager-Report:ReportParameterCollection_CL.adoc[ReportParameterCollection]` |Содержит методы для работы с коллекцией `ReportParameter`.
+|`xref:Platform-ObjectManager-Row:RowData_CL.adoc[RowData]` |Представляет строку данных карточки.
+|`xref:Platform-ObjectManager-Row:RowDataCollection_CL.adoc[RowDataCollection]` |Содержит методы для работы с коллекцией `RowData`.
+|`xref:Platform-ObjectManager-Row:RowField_CL.adoc[RowField]` |Описывает поле секции карточки.
+|`xref:Platform-ObjectManager-Row:RowFieldCollection_CL.adoc[RowFieldCollection]` |Содержит методы для работы с коллекцией `RowField`.
 |`xref:Platform-ObjectManager-SectionData:SearchAggregationItemInfo_CL.adoc[SearchAggregationItemInfo]` |Список объектов.
 |`xref:Platform-ObjectManager-SectionData:SearchAggregationItemsRequest_CL.adoc[SearchAggregationItemsRequest]` |Объект запроса.
 |`xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]` |Представляет секцию карточки.
 |`xref:Platform-ObjectManager-SectionData:SectionDataCollection_CL.adoc[SectionDataCollection]` |Содержит методы для работы с коллекцией `SectionData`.
 |`xref:Platform-ObjectManager-SectionData:SectionDataReader_CL.adoc[SectionDataReader]` |Серверный курсор для чтения данных секции.
 |`xref:Platform-ObjectManager-SessionManager:SessionManager_CL.adoc[SessionManager]` |Представляет объектную модель *менеджера сессий*. Содержит методы управления сессиями пользователей.
-|`xref:Platform-ObjectManager:SubSectionData_CL.adoc[SubSectionData]` |Представляет подсекцию карточки.
+|`xref:Platform-ObjectManager-SubSectionData:SubSectionData_CL.adoc[SubSectionData]` |Представляет подсекцию карточки.
 |`xref:Platform-ObjectManager-Report:QueryParameter_CL.adoc[QueryParameter]` |Осуществляет хранение параметра запроса.
 |`xref:Platform-ObjectManager-Report:QueryParameterCollection_CL.adoc[QueryParameterCollection]` |Содержит методы для работы с коллекцией `QueryParameter`.
 |`xref:Platform-ObjectManager-UserSession:ViewReadRequest_CL.adoc[ViewReadRequest]` |Запрос представления.
@@ -75,11 +75,11 @@
 [cols=",",options="header"]
 |===
 |Интерфейс |Описание
-|`xref:Platform-ObjectManager:ILockable_IN.adoc[ILockable]` |Разрешает для объекта управление режимом отложенной блокировки.
-|`xref:Platform-ObjectManager:IProcessInfo_IN.adoc[IProcessInfo]` |Определяет возможности по управлению состоянием конкретного бизнес-процесса и получению базовой информации о самом бизнес-процессе.
+|`xref:Platform-ObjectManager-ILockable:ILockable_IN.adoc[ILockable]` |Разрешает для объекта управление режимом отложенной блокировки.
+|`xref:Platform-ObjectManager-IUpdatable:IProcessInfo_IN.adoc[IProcessInfo]` |Определяет возможности по управлению состоянием конкретного бизнес-процесса и получению базовой информации о самом бизнес-процессе.
 |`xref:Platform-ObjectManager-IUpdatable:ISecurable_IN.adoc[ISecurable]` |Разрешает объекту реализовывать модель безопасности.
-|`xref:Platform-ObjectManager:IUpdatable_IN.adoc[IUpdatable]` |Разрешает для объекта режим отложенной записи.
-|`xref:Platform-ObjectManager:IXmlExportable_IN.adoc[IXmlExportable]` |Разрешает сохранять данные объекта в XML-формате.
+|`xref:Platform-ObjectManager-IUpdatable:IUpdatable_IN.adoc[IUpdatable]` |Разрешает для объекта режим отложенной записи.
+|`xref:Platform-ObjectManager-IXmlExportable:IXmlExportable_IN.adoc[IXmlExportable]` |Разрешает сохранять данные объекта в XML-формате.
 |===
 
 == Перечисления
@@ -90,7 +90,7 @@
 |`xref:Platform-ObjectManager-AccessManager:ArchiveOptions_EN.adoc[ArchiveOptions]` |Режим архивации объекта.
 |`xref:Platform-ObjectManager-AccessManager:ArchiveState_EN.adoc[ArchiveState]` |Определяет признак архивирования объекта.
 |`xref:Platform-ObjectManager-CardManager:ClearLogStrategy_EN.adoc[ClearLogStrategy]` |Определяет стратегию автоматической очистки журнала.
-|`xref:Platform-ObjectManager:CryptObjectType_EN.adoc[CryptObjectType]` |Тип крипто-объекта.
+|`xref:Platform-ObjectManager-CardManager:CryptObjectType_EN.adoc[CryptObjectType]` |Тип крипто-объекта.
 |`xref:Platform-ObjectManager-ExportCard:EventType_EN.adoc[EventType]` |Определяет типы записей в журнале событий.
 |`xref:Platform-ObjectManager-ExportCard:ExportFlags_EN.adoc[ExportFlags]` |Задает формат экспорта данных.
 |`xref:Platform-ObjectManager-Lock:LinkType_EN.adoc[LinkType]` |Маска типа ссылки.
@@ -99,7 +99,7 @@
 |`xref:Platform-ObjectManager-LogManager:LogStrategy_EN.adoc[LogStrategy]` |Определяет стратегию ведения журнала.
 |`xref:Platform-ObjectManager-Metadata:ObjectState_EN.adoc[ObjectState]` |Определяет состояние объекта.
 |`xref:Platform-ObjectManager-Metadata:ObjectStatus_EN.adoc[ObjectStatus]` |Состояние объекта в режиме отложенной записи.
-|`xref:Platform-ObjectManager:OfflineState_EN.adoc[OfflineState]` |Состояние хранения файла.
+|`xref:Platform-ObjectManager-Metadata:OfflineState_EN.adoc[OfflineState]` |Состояние хранения файла.
 |`xref:Platform-ObjectManager-Metadata:ParameterValueType_EN.adoc[ParameterValueType]` |Предоставляет тип для параметра метода серверного расширения.
 |`xref:Platform-ObjectManager-Report:RecordStatus_EN.adoc[RecordStatus]` |Состояние задействованности объекта.
 |`xref:Platform-ObjectManager-SessionManager:SessionLoginFlags_EN.adoc[SessionLoginFlags]` |Описывает флаги открытия новой сессии.
