--- a/modules/Platform-ObjectManager-SystemCards/pages/SavedView.Export_MT.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/SavedView.Export_MT.adoc
@@ -13,7 +13,7 @@ public abstract View Export()
 ----
 
 Возвращаемое значение::
-Тип: `xref:Platform-ObjectManager-UserSession:ViewModel/View_CL.adoc[View]`
+Тип: `xref:Platform-ObjectManager-ViewModel:View_CL.adoc[View]`
 +
 Описание представления
 
