--- a/modules/cards/pages/access-control.adoc
+++ b/modules/cards/pages/access-control.adoc
@@ -30,12 +30,12 @@ ACE объединяются в список ACL (`access control list`). DACL (
 * Смена владельца (`TO`).
 
 .Система позволяет назначать права на все низкоуровневые объекты:
-* Типы карточек (`xref:Platform-ObjectManager:Metadata/CardType_CL.adoc[CardType]`).
+* Типы карточек (`xref:Platform-ObjectManager-Metadata:CardType_CL.adoc[CardType]`).
 * Карточки (`xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]`).
 * Секции (`xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]`).
-* Строки (`xref:Platform-ObjectManager:RowData_CL.adoc[RowData]`).
+* Строки (`xref:Platform-ObjectManager-Row:RowData_CL.adoc[RowData]`).
 * Файлы (`xref:Platform-ObjectManager-ILockable:FileData_CL.adoc[FileData]`).
-* Хранимые процедуры (`xref:Platform-ObjectManager:Report_CL.adoc[Report]`).
+* Хранимые процедуры (`xref:Platform-ObjectManager-Report:Report_CL.adoc[Report]`).
 * Пользовательские объекты.
 
 Для этого в каждом из этих объектов предусмотрено два специальных метода: `GetAccessControl` -- возвращающий описатель прав и `SetAccessControl`, устанавливающий описатель прав.
