--- a/modules/cards/pages/files.adoc
+++ b/modules/cards/pages/files.adoc
@@ -55,7 +55,7 @@ Guid newFileId = file.Id; <.>
 Для выполнения операций вытеснения/восстановления файлов из внешнего хранилища требуется наличие привилегии оператора архива (членство в группе _Docsvision Archive Operators_).
 ====
 
-Текущее состояние файла определяется элементом из перечисления xref:Platform-ObjectManager:OfflineState_EN.adoc[`OfflineState` -- перечисление].
+Текущее состояние файла определяется элементом из перечисления xref:Platform-ObjectManager-Metadata:OfflineState_EN.adoc[`OfflineState` -- перечисление].
 
 == Системный объект -- версия файла
 
@@ -74,7 +74,7 @@ Guid newFileId = file.Id; <.>
 
 Для работы с системной карточкой файла в менеджере объектов предусмотрен объект `xref:Platform-ObjectManager-SystemCards:VersionedFileCard_CL.adoc[VersionedFileCard]`.
 
-Поскольку карточка файла является обычной карточкой {dv}, то для её создания необходимо прибегнуть к помощи объекта -- менеджера карточек (`xref:Platform-ObjectManager:CardManager_CL.adoc[CardManager]`).
+Поскольку карточка файла является обычной карточкой {dv}, то для её создания необходимо прибегнуть к помощи объекта -- менеджера карточек (`xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[CardManager]`).
 
 .Пример создания и первичной инициализации карточки файла:
 [source,csharp]
