--- a/modules/cards/pages/folder-shortcut.adoc
+++ b/modules/cards/pages/folder-shortcut.adoc
@@ -11,7 +11,7 @@
 Все объекты расположены в специальном пространстве имён для работы с системными карточками -- `DocsVision.Platform.ObjectManager.SystemCards`.
 ====
 
-Как и все системные карточки, этот объект может быть получен через стандартный интерфейс методами `xref:Platform-ObjectManager:CardManager.GetCard_MT.adoc[CardManager.GetCard]` или `xref:Platform-ObjectManager:CardManager.GetDictionary_MT.adoc[CardManager.GetDictionary]`.
+Как и все системные карточки, этот объект может быть получен через стандартный интерфейс методами `xref:Platform-ObjectManager-CardManager:CardManager.GetCard_MT.adoc[CardManager.GetCard]` или `xref:Platform-ObjectManager-CardManager:CardManager.GetDictionary_MT.adoc[CardManager.GetDictionary]`.
 
 [NOTE]
 ====
