--- a/modules/cards/pages/get-card.adoc
+++ b/modules/cards/pages/get-card.adoc
@@ -14,7 +14,7 @@
 CardData card = userSession.CardManager.GetCardData(cardId) <.> <.> <.>
 ----
 <.> `userSession` -- xref:connect-to-dv-server.adoc[пользовательская сессия].
-<.> `CardManager` -- xref:Platform-ObjectManager:CardManager_CL.adoc[менеджер карточек], в котором собрана основная функциональность базового API для работы с карточками.
+<.> `CardManager` -- xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[менеджер карточек], в котором собрана основная функциональность базового API для работы с карточками.
 <.> `cardId` -- идентификатор запрашиваемой карточки. Обычно (как и `GetCardData`) методы принимают идентификаторы, приведенные к типу http://msdn.microsoft.com/ru-ru/library/system.guid.aspx[`System.Guid`]:
 +
 [source,csharp]
