--- a/modules/cards/pages/signing-encryption.adoc
+++ b/modules/cards/pages/signing-encryption.adoc
@@ -9,7 +9,7 @@
 
 == Базовый API
 
-На уровне базового API реализация механизма подписания и шифрования обеспечивает возможность создания, чтения и удаления специального типа объектов -- крипто-объектов. Данные объекты могут быть двух типов, перечисленных в `xref:Platform-ObjectManager:CryptObjectType_EN.adoc[DocsVision.Platform.ObjectManager.CryptObjectType]`:
+На уровне базового API реализация механизма подписания и шифрования обеспечивает возможность создания, чтения и удаления специального типа объектов -- крипто-объектов. Данные объекты могут быть двух типов, перечисленных в `xref:Platform-ObjectManager-CardManager:CryptObjectType_EN.adoc[DocsVision.Platform.ObjectManager.CryptObjectType]`:
 
 * `CryptObjectType.Signature` -- подпись.
 * `CryptObjectType.Key` -- публичный ключ шифрования.
