--- a/modules/cards/pages/use-reports.adoc
+++ b/modules/cards/pages/use-reports.adoc
@@ -125,7 +125,7 @@ image::ROOT:card-manager-reports-result-config.png[Пример настройк
 
 == Вызов отчета
 
-Для работы с отчетами API {dv} предоставляет менеджер отчетов типа `xref:Platform-ObjectManager:ReportManager_CL.adoc[ReportManager]`.
+Для работы с отчетами API {dv} предоставляет менеджер отчетов типа `xref:Platform-ObjectManager-Report:ReportManager_CL.adoc[ReportManager]`.
 
 Все отчеты содержатся в поле _Reports_ класса `ReportManager`.
 
