--- a/modules/Platform-ObjectManager-ExportCard/pages/ExportCardInspector.BeforeExportField_MT.adoc
+++ b/modules/Platform-ObjectManager-ExportCard/pages/ExportCardInspector.BeforeExportField_MT.adoc
@@ -14,7 +14,7 @@ public virtual void BeforeExportField(RowData rowData, Field rowField, ref bool 
 
 Параметры::
 rowData:::
-Тип: `xref:Platform-ObjectManager:RowData_CL.adoc[RowData]`
+Тип: `xref:Platform-ObjectManager-Row:RowData_CL.adoc[RowData]`
 +
 Строка секции
 
