--- a/modules/ROOT/pages/whats-new.adoc
+++ b/modules/ROOT/pages/whats-new.adoc
@@ -8,11 +8,11 @@
 ** `xref:ApprovalDesigner:ObjectModel/Services/ApprovalStageService_CL.adoc[ApprovalStageService]` -- класс содержит методы для работы с этапом согласования.
 ** `xref:ApprovalDesigner:ObjectModel/Services/ApprovalStageEventHandlerService_CL.adoc[ApprovalStageEventHandlerService]` -- обрабатывает события этапа согласования.
 * Интерфейс `xref:ApprovalDesigner:ObjectModel/Services/IApprovalStageService_IN.adoc[IApprovalStageService]` расширен новым методом `xref:ApprovalDesigner:ObjectModel/Services/GetStageApprovers_MT.adoc[GetStageApprovers(ApprovalStage approvalStage, Document document)]`, который возвращает согласующих этапа в результате вызова `CopyApproversFromDocument`.
-* Класс `xref:Platform-ObjectManager:CardManager_CL.adoc[CardManager]` расширен методами API для работы с агрегатами поиска:
-** `xref:Platform-ObjectManager:CardManager.GetSearchAggregationItemsRequest_MT.adoc[GetSearchAggregationItemsRequest (SearchAggregationItemsResultType, Guid, Guid, string, int?)]` -- возвращает результат агрегации.
-** `xref:Platform-ObjectManager:CardManager.FindAggregationCardsInfo_MT.adoc[FindAggregationCardsInfo (SearchAggregationItemsRequest)]` -- получает список агрегатов и/или результаты фильтрации.
+* Класс `xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[CardManager]` расширен методами API для работы с агрегатами поиска:
+** `xref:Platform-ObjectManager-CardManager:CardManager.GetSearchAggregationItemsRequest_MT.adoc[GetSearchAggregationItemsRequest (SearchAggregationItemsResultType, Guid, Guid, string, int?)]` -- возвращает результат агрегации.
+** `xref:Platform-ObjectManager-CardManager:CardManager.FindAggregationCardsInfo_MT.adoc[FindAggregationCardsInfo (SearchAggregationItemsRequest)]` -- получает список агрегатов и/или результаты фильтрации.
 * В пространство имён `xref:Platform-ObjectManager-Metadata:ObjectManager_NS.adoc[DocsVision.Platform.ObjectManager]` добавлены новые классы:
 ** `xref:Platform-ObjectManager-SectionData:SearchAggregationItemsRequest_CL.adoc[SearchAggregationItemsRequest]` -- представляет объект запроса
 ** `xref:Platform-ObjectManager-SectionData:SearchAggregationItemInfo_CL.adoc[SearchAggregationItemInfo]` -- представляет список объектов.
-* В пространство имён `xref:Platform-ObjectManager-SectionData:SearchModel/SearchModel_NS.adoc[DocsVision.Platform.ObjectManager.SearchModel]` добавлено перечисление:
-** `xref:Platform-ObjectManager-SectionData:SearchModel/SearchAggregationItemsResultType_EN.adoc[SearchAggregationItemsResultType]` -- результат поиска агрегатов.
+* В пространство имён `xref:Platform-ObjectManager-SearchModel:SearchModel_NS.adoc[DocsVision.Platform.ObjectManager.SearchModel]` добавлено перечисление:
+** `xref:Platform-ObjectManager-SearchModel:SearchAggregationItemsResultType_EN.adoc[SearchAggregationItemsResultType]` -- результат поиска агрегатов.
