--- a/modules/cards/pages/card-lock.adoc
+++ b/modules/cards/pages/card-lock.adoc
@@ -43,7 +43,7 @@ fileData.PlaceLock(true); <.>
 <.> Получаем файл.
 <.> Устанавливаем постоянную блокировку.
 
-Помимо методов блокировки, классы карточек (`CardData`), строк (`RowData`) и файлов (`FileData`) содержат методы снятия блокировки, определяемые интерфейсом `xref:Platform-ObjectManager:ILockable_IN.adoc[ILockable]`:
+Помимо методов блокировки, классы карточек (`CardData`), строк (`RowData`) и файлов (`FileData`) содержат методы снятия блокировки, определяемые интерфейсом `xref:Platform-ObjectManager-ILockable:ILockable_IN.adoc[ILockable]`:
 
 * `RemoveLock` -- снимает блокировку с объекта, установленную в собственной сессии.
 * `ForceUnlock` -- принудительно снимает блокировку, в т.ч. установленную другим пользователем -- необходимы административные права.
