--- a/modules/cards/pages/general-information.adoc
+++ b/modules/cards/pages/general-information.adoc
@@ -56,13 +56,13 @@ _Менеджеры_ -- сущности базового API, в которых
 
 .Например, есть менеджеры для работы с карточками, файлами, безопасностью и прочие:
 * `xref:Platform-ObjectManager-AccessManager:AccessManager_CL.adoc[AccessManager]` -- менеджер объектов безопасности, в котором представлены методы управления правами доступа на объекты системы, а также методы для работы с крипто-объектами.
-* `xref:Platform-ObjectManager:CardManager_CL.adoc[CardManager]` -- менеджер карточек. Данный менеджер предоставляет полный набор средств для работы с экземплярами карточек: создание, получение и удаление.
+* `xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[CardManager]` -- менеджер карточек. Данный менеджер предоставляет полный набор средств для работы с экземплярами карточек: создание, получение и удаление.
 * `xref:Platform-ObjectManager-Extension:ExtensionManager_CL.adoc[ExtensionManager]` -- менеджер расширений. Данный менеджер предоставляет единственный метод `GetExtensionMethod`, возвращающий метод серверного расширения.
 * `xref:Platform-ObjectManager-ILockable:FileManager_CL.adoc[FileManager]` -- менеджер файлов, предоставляющий методы для работы с файлами: создание, получение и удаление, а также некоторые другие.
 * `xref:Platform-ObjectManager-Lock:LicenseManager_CL.adoc[LicenseManager]` -- менеджер лицензий. Данный менеджер предоставляет два метода для учета числа подключений в лицензии дополнительного модуля.
 * `xref:Platform-ObjectManager-Lock:LockManager_CL.adoc[LockManager]` -- менеджер блокировок. Предоставляет методы получения объектов xref:card-lock.adoc[блокировки] с объекта системы. Для полнофункциональной работы могут потребоваться права администратора.
 * `xref:Platform-ObjectManager-LogManager:LogManager_CL.adoc[LogManager]` -- менеджер журнала. Данный менеджер содержит операции для работы с системным журналом.
-* `xref:Platform-ObjectManager:ReportManager_CL.adoc[ReportManager]` -- менеджер хранимых процедур. Предоставляет метод для получения данных хранимой процедуры.
+* `xref:Platform-ObjectManager-Report:ReportManager_CL.adoc[ReportManager]` -- менеджер хранимых процедур. Предоставляет метод для получения данных хранимой процедуры.
 
 Чтобы получить доступ к интересующему _менеджеру_, необходимо обратиться к соответствующему свойству сущности xref:general-information.adoc#session-context[пользовательской сессии]:
 
@@ -272,16 +272,16 @@ image::ROOT:card-sample-structure.png[Структура экземпляра к
 
 * `xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]` -- данные экземпляра карточки. Включает совокупность всех данных секций и атрибутов конкретного экземпляра карточки.
 * `xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]` -- данные секции карточки, из которой может быть получена коллекция всех её строк.
-* `xref:Platform-ObjectManager:RowDataCollection_CL.adoc[RowDataCollection]` -- коллекция строк секции, из которой могут быть выбраны конкретные строки.
+* `xref:Platform-ObjectManager-Row:RowDataCollection_CL.adoc[RowDataCollection]` -- коллекция строк секции, из которой могут быть выбраны конкретные строки.
 +
 [NOTE]
 ====
 Если коллекция получена непосредственно из карточки, то она считается "живой", т.е. при создании/удалении строки изменения в коллекции будут видны сразу же. Если коллекция получена поисковым запросом, она является "моментальным снимком" данных, доступным только на чтение.
 ====
 +
-* `xref:Platform-ObjectManager:RowData_CL.adoc[RowData]` -- строка секции. Выбрать строку из коллекции строк можно по уникальному идентификатору, по номеру в коллекции либо перебором.
-* `xref:Platform-ObjectManager:SubSectionData_CL.adoc[SubSectionData]` -- подмножество строк (подсекция) секции, подчинённых определённой строке из родительской секции.
-* `xref:Platform-ObjectManager:Metadata/Field_CL.adoc[Field]` -- поле строки секции, а точнее его значение.
+* `xref:Platform-ObjectManager-Row:RowData_CL.adoc[RowData]` -- строка секции. Выбрать строку из коллекции строк можно по уникальному идентификатору, по номеру в коллекции либо перебором.
+* `xref:Platform-ObjectManager-SubSectionData:SubSectionData_CL.adoc[SubSectionData]` -- подмножество строк (подсекция) секции, подчинённых определённой строке из родительской секции.
+* `xref:Platform-ObjectManager-Metadata:Field_CL.adoc[Field]` -- поле строки секции, а точнее его значение.
 
 .Обычный сценарий доступа к данным карточки с привлечением приведенных типов следующий:
 . Получить экземпляр карточки -- `CardData`.
