--- a/modules/views/pages/download-mode.adoc
+++ b/modules/views/pages/download-mode.adoc
@@ -4,7 +4,7 @@
 
 В приведенном примере Схема карточки определяет механизм загрузки её данных из базы данных, Схема карточки определяет режим загрузки её данных из базы данных.
 
-Для сценариев, связанных с получением данных карточки, актуально такое понятие, как режим загрузки данных, который определяет порцию информации, загружаемой с сервера {dv}, за одно обращение. Режим загрузки может иметь одно из следующих значений (см. описание перечисления `xref:Platform-ObjectManager:Metadata/FetchMode_EN.adoc[FetchMode]`):
+Для сценариев, связанных с получением данных карточки, актуально такое понятие, как режим загрузки данных, который определяет порцию информации, загружаемой с сервера {dv}, за одно обращение. Режим загрузки может иметь одно из следующих значений (см. описание перечисления `xref:Platform-ObjectManager-Metadata:FetchMode_EN.adoc[FetchMode]`):
 
 * `Card` -- будут загружены данные всех секций карточки (актуально только для карточки в целом).
 * `Section` -- при обращении к какой-либо строке секции будут загружены все её строки, в т.ч. данные её подсекций.
@@ -25,7 +25,7 @@
 .В зависимости от того к каким данным карточки требуется доступ, можно выделить несколько объектов реализующих его:
 * `xref:Platform-ObjectManager-CardData:CardData_CL.adoc[CardData]` -- точка входа к основным данным карточки (контейнеру).
 * `xref:Platform-ObjectManager-SectionData:SectionData_CL.adoc[SectionData]` -- доступ к секциям карточки.
-* `xref:Platform-ObjectManager:SubSectionData_CL.adoc[SubSectionData]` -- доступ к подсекциям карточки.
+* `xref:Platform-ObjectManager-SubSectionData:SubSectionData_CL.adoc[SubSectionData]` -- доступ к подсекциям карточки.
 
 == Кэширование данных
 
@@ -37,4 +37,4 @@
 
 Неявный характер обновления данных во втором случае нужно всегда иметь в виду и избегать частого повторного получения данных карточки. В этом случае всегда производится серверный вызов -- обновляется информация о статусе карточки (если такая карточка уже получалась ранее).
 
-Существует также возможность очистить весь кэш одним вызовом -- для этого предназначен метод `PurgeCache` экземпляра `xref:Platform-ObjectManager:CardManager_CL.adoc[CardManager]`.
+Существует также возможность очистить весь кэш одним вызовом -- для этого предназначен метод `PurgeCache` экземпляра `xref:Platform-ObjectManager-CardManager:CardManager_CL.adoc[CardManager]`.
