--- a/modules/solutions/pages/cards/object-model/mapper.adoc
+++ b/modules/solutions/pages/cards/object-model/mapper.adoc
@@ -102,7 +102,7 @@ public class SampleCardTreeSectionMapper : CardRowMapper<SampleCardTreeSection>
 
 == Преобразователь данных для карточки
 
-Преобразователь данных для карточки оформляется аналогичным образом, за исключением базового класса (должен быть класс `xref:BackOffice-ObjectModel:Mapping/BaseCardMapper_CL.adoc[BaseCardMapper<T>]`) и того, что в карте присутствуют исключительно секции.
+Преобразователь данных для карточки оформляется аналогичным образом, за исключением базового класса (должен быть класс `xref:BackOffice-ObjectModel-Mapping:Mapping/BaseCardMapper_CL.adoc[BaseCardMapper<T>]`) и того, что в карте присутствуют исключительно секции.
 
 [source,csharp]
 ----
