GBL-1752 / TSK-2109 -- не кастомный, а специальный!

--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageEventHandlerService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageEventHandlerService_CL.adoc
@@ -19,10 +19,10 @@ public class ApprovalStageEventHandlerService : ApprovalDesignerEventHandlerServ
 |Имя |Описание
 
 |`GetApprovalStageService(ApprovalStage)`
-|Получает собственный сервис обработки этапа согласования.
+|Получает {service} согласования.
 
 |`GetId() => ServiceId`
-|Получает идентификатор сервиса обработки этапа.
+|Получает идентификатор {of-service}.
 
 |`GetHandlersInfo()`
 |Получает информацию об обработчиках событий.
