--- a/modules/solutions/pages/extensions/extensions.adoc
+++ b/modules/solutions/pages/extensions/extensions.adoc
@@ -1,6 +1,6 @@
 = Разработка расширений {dv}
 
-Полноценный процесс кастомизации решения не может обойтись без создания дополнений в клиентской или серверной части продукта. Организации может потребоваться внести в интерфейс {wincl}а изменения, не реализуемые в рамках объектной модели. Например, возможность формирования файла экспорта определённого формата непосредственно из {wincl}а.
+Полноценный процесс персонализации решения не может обойтись без создания дополнений в клиентской или серверной части продукта. Организации может потребоваться внести в интерфейс {wincl}а изменения, не реализуемые в рамках объектной модели. Например, возможность формирования файла экспорта определённого формата непосредственно из {wincl}а.
 
 Также может потребоваться выполнять определённые методы в контексте сервера и с его привилегиями. Разработка расширений с использованием объектной модели {dv} не сложнее процесса разработки карточки, но создания плагинов обладает своими преимуществами.
 
