Переделал атрибуты, местами текст подправил и т.д.

--- a/modules/ApprovalDesigner/pages/ApprovalDesigner_NS.adoc
+++ b/modules/ApprovalDesigner/pages/ApprovalDesigner_NS.adoc
@@ -1,13 +1,13 @@
 = DocsVision.ApprovalDesigner -- пространство имён
 
-Пространство имён `DocsVision.ApprovalDesigner` содержит типы и методы приложения _Конструктор согласований_.
+Пространство имён `DocsVision.ApprovalDesigner` содержит типы и методы приложения _{ad}_.
 
 == Пространства имён
 
 [cols=",",options="header"]
 |===
 |Пространство имён |Описание
-|`xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel]` |Содержит типы объектной модели приложения Конструктор согласований.
+|`xref:Platform-ObjectModel:ObjectModel_NS.adoc[DocsVision.ApprovalDesigner.ObjectModel]` |Содержит типы объектной модели модуля {ad}.
 |===
 
 == Заметки
