--- a/modules/ApprovalDesigner/pages/ObjectModel/ObjectModel_NS.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/ObjectModel_NS.adoc
@@ -1,6 +1,6 @@
 = DocsVision.ApprovalDesigner.ObjectModel -- пространство имён
 
-Содержит типы объектной модели приложения Конструктор согласований.
+Содержит типы объектной модели приложения {ad}.
 
 == Пространства имён
 
