--- a/modules/Workflow/pages/Workflow_NS.adoc
+++ b/modules/Workflow/pages/Workflow_NS.adoc
@@ -7,7 +7,7 @@
 [cols=",",options="header"]
 |===
 |Пространство имён |Описание
-|`xref:Functions/Functions_NS.adoc[DocsVision.Workflow.Functions]` |В пространстве имён DocsVision.Workflow.Functions сосредоточены объекты, отвечающие за предоставление доступ к базовым функции приложения Управление процессами, функциям взаимодействия с объектами {dv}, файловой системой и с Microsoft Exchange.
+|`xref:Functions/Functions_NS.adoc[DocsVision.Workflow.Functions]` |В пространстве имён DocsVision.Workflow.Functions сосредоточены объекты, отвечающие за предоставление доступ к базовым функции приложения {wf}, функциям взаимодействия с объектами {dv}, файловой системой и с Microsoft Exchange.
 |`xref:Gates/Gates_NS.adoc[DocsVision.Workflow.Gates]` |Данное пространство имён содержит интерфейсы, используемые при создании шлюза Workflow, методы работы со шлюзами, а также несколько готовых объектов данного типа: шлюз к базовым типам, к {dv}, шлюз в файловую систему и в Microsoft Exchange.
 |`xref:Objects/Objects_NS.adoc[DocsVision.Workflow.Objects]` |Пространство имён DocsVision.Workflow.Objects содержит описания структур данных карточек Workflow (карточка процесса, справочники).
 |`xref:ObjectsUI/ObjectsUI_NS.adoc[DocsVision.Workflow.ObjectsUI]` |Пространство имён `DocsVision.Workflow.ObjectsUI` содержит описания элементов пользовательского интерфейса, взаимодействующих с реализуемыми объектами Workflow.
