--- a/modules/bpms/pages/develop-environment.adoc
+++ b/modules/bpms/pages/develop-environment.adoc
@@ -1,6 +1,6 @@
 = Разработка в среде СУБП
 
-Данный раздел содержит информацию, предназначенную для разработчиков, создающих решение на платформе {dv} с использованием приложения _Управление процессами_. В разделе раскрываются вопросы связанные с созданием дополнительных _функций_ СУБП, _сценариев_, _шлюзов_ и других объектов системы, расширяющих её функциональные возможности по реализации специфических бизнес-процессов.
+Данный раздел содержит информацию, предназначенную для разработчиков, создающих решение на платформе {dv} с использованием приложения _{wf}_. В разделе раскрываются вопросы связанные с созданием дополнительных _функций_ СУБП, _сценариев_, _шлюзов_ и других объектов системы, расширяющих её функциональные возможности по реализации специфических бизнес-процессов.
 
 .В данном разделе освещаются следующие темы:
 * Правила разработки пользовательских _функций_ и _шлюзов_.
@@ -8,7 +8,7 @@
 
 == Общие сведения
 
-Платформа {dv} и приложение _Управление процессами_ представляют собой систему описания сложных процессов обработки информации в организации и полнофункциональный Workflow-сервер. _СУБП_ представляет собой решение на основе платформы {dv}, предназначенное для создания бизнес-процессов любой сложности и управления ими.
+Платформа {dv} и приложение _{wf}_ представляют собой систему описания сложных процессов обработки информации в организации и полнофункциональный Workflow-сервер. _СУБП_ представляет собой решение на основе платформы {dv}, предназначенное для создания бизнес-процессов любой сложности и управления ими.
 
 Ключевыми объектами в терминологии _СУБП_ являются _бизнес-процесс_, _переменные процесса_, _функции_ и _шлюзы_.
 
