--- a/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
+++ b/modules/solutions/pages/cards/scheme/dev-cards-and-lib.adoc
@@ -2,7 +2,7 @@
 
 [IMPORTANT]
 ====
-Модификация карточек и решений, входящих в стандартную поставку системы {dv} ("{bo}" и "Управление процессами"), не допускается ни при каких условиях. Их исходный код не подлежит распространению.
+Модификация карточек и решений, входящих в стандартную поставку системы {dv} ("{bo}" и "{wf}"), не допускается ни при каких условиях. Их исходный код не подлежит распространению.
 ====
 
 Система может быть расширена путем добавления новых пользовательских модулей -- _карточек_. Система изначально содержит ряд карточек, необходимых для её работы. Такие карточки называются _системными объектами_.
