--- a/modules/views/pages/event-logs.adoc
+++ b/modules/views/pages/event-logs.adoc
@@ -11,7 +11,7 @@
 .Журнал {dv} разбит на три разных части:
 * Система -- записи в этом журнале фиксирует сервер {dv}. Сюда могут попадать как ошибки, так и аудит низкоуровневых операций, выполняемых сервером {dv}.
 * Безопасность -- в этом журнале фиксируются результаты аудит операций над объектами, для которых он явно настроен.
-* Приложения -- в этот журнал попадают операции, фиксируемые конкретными приложениями (Делопроизводство, Управление процессами, и т.д.). Сюда же попадают все сообщения от решений сторонних разработчиков.
+* Приложения -- в этот журнал попадают операции, фиксируемые конкретными приложениями (Делопроизводство, {wf}, и т.д.). Сюда же попадают все сообщения от решений сторонних разработчиков.
 
 .В системном журнале (Система) автоматически фиксируются следующие низкоуровневые операции сервера:
 * Операции с карточками:
