--- a/modules/BackOffice-ObjectModel-Services-INumerationRulesService/pages/IOcspService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-INumerationRulesService/pages/IOcspService_IN.adoc
@@ -22,4 +22,4 @@ public interface IOcspService
 
 == Заметки
 
-Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные в xref:baseobjects:admin:system-settings.adoc#signature-cypher[документации по администрированию] модуля _Базовые объекты_.
+Для работы с сервисом (возможно только из скрипта карточки), должны быть выполнены настройки, приведенные в xref:baseobjects:admin:system-settings.adoc#signature-cypher[документации по администрированию] модуля _{bo}_.
