--- a/modules/DocsVisionObjectModel/pages/DocsVision/DocsVision_NS.adoc
+++ b/modules/DocsVisionObjectModel/pages/DocsVision/DocsVision_NS.adoc
@@ -7,7 +7,7 @@
 [cols=",",options="header"]
 |===
 |Пространство имён |Описание
-|`xref:ApprovalDesigner:ApprovalDesigner_NS.adoc[DocsVision.ApprovalDesigner]` |Пространство имён `DocsVision.ApprovalDesigner` содержит типы и методы приложения _Конструктор согласований_.
+|`xref:ApprovalDesigner:ApprovalDesigner_NS.adoc[DocsVision.ApprovalDesigner]` |Пространство имён `DocsVision.ApprovalDesigner` содержит типы и методы приложения _{ad}_.
 |`xref:BackOffice-CardLib:BackOffice_NS.adoc[DocsVision.BackOffice]` |Пространство имён `DocsVision.BackOffice` содержит типы представляющие объектную модель библиотеки {bo}.
 |`xref:DocumentsManagement:DocumentsManagement_NS.adoc[DocsVision.DocumentsManagement]` |Пространство имён `DocsVision.DocumentsManagement` содержит описание сервиса для отправки согласования.
 |`xref:Platform-CardHost:Platform_NS.adoc[DocsVision.Platform]` |В пространстве имён `DocsVision.Platform` содержатся классы реализующие API уровня ядра {dv}.
