--- a/modules/schemas/pages/standard-card-fields.adoc
+++ b/modules/schemas/pages/standard-card-fields.adoc
@@ -3,8 +3,8 @@
 .В данном разделе приведено описание схем метаданных карточек следующих модулей {dv}:
 * {dv} 5. {pl} версии {pl-v}.
 * {dv} 5. {bo} версии {bo-v}.
-* {dv} 5. {ud} версии {wf-v}.
-* {dv} 5. Управление процессами версии {dm-v}.
+* {dv} 5. {dm} версии {wf-v}.
+* {dv} 5. {wf} версии {dm-v}.
 * {dv} 5. {ad} версии {ad-v}.
 * {dv} 5. Делопроизводство 4.5 версии {to-v}.
 * {dv} 5. {wincl} версии версии {win-v}.
@@ -79,12 +79,12 @@
 |xref:release/Core/Settings.adoc[Системные настройки]
 |xref:release/Core/MandatoryAccess.adoc[Справочник мандатной безопасности]
 |xref:release/Core/FolderTypes.adoc[Справочник типов папок]
-.5+|Управление процессами |xref:release/Workflow/Process.adoc[Бизнес-процесс]
+.5+|{wf} |xref:release/Workflow/Process.adoc[Бизнес-процесс]
 |xref:release/Workflow/Monitor.adoc[Монитор бизнес-процессов]
 |xref:release/Workflow/Settings.adoc[Настройки Workflow]
 |xref:release/Workflow/FunctionList.adoc[Справочник функций]
 |xref:release/Workflow/GateList.adoc[Справочник шлюзов]
-.3+|Конструктор согласований |xref:release/ApprovalDesigner/CardApprovalPath.adoc[Маршрут согласования]
+.3+|{ad} |xref:release/ApprovalDesigner/CardApprovalPath.adoc[Маршрут согласования]
 |xref:release/ApprovalDesigner/CardApprovalResult.adoc[Результат согласования]
 |xref:release/ApprovalDesigner/CardApprovalStage.adoc[Этап согласования]
 |===
