Запятая в "При необходимости"

--- a/modules/cards/pages/search.adoc
+++ b/modules/cards/pages/search.adoc
@@ -181,7 +181,7 @@ condition.SectionAlias = "RegisteredBy_Info";
 --
 .Если условие использует агрегацию:
 * Задать имя функции (`AggregateFunctionName`).
-* При необходимости, задать дополнительные условия на агрегируемые значения (AggregateConditionGroup).
+* При необходимости задать дополнительные условия на агрегируемые значения (AggregateConditionGroup).
 --
 +
 . Выполнить запрос (`CardManager.FindCards`).
