--- a/modules/views/pages/data-description.adoc
+++ b/modules/views/pages/data-description.adoc
@@ -65,7 +65,7 @@ element.MergeVirtualField(savedField.Export(), "Performers", "Performers"); <.>
 .. Определить агрегацию (`Aggregation`), выполняемую над физическими источниками данных.
 .. Определить операцию (`Operation`), выполняемую над физическими источниками данных.
 .. Задать ожидаемый тип результата вычислений (`Type`).
-.. При необходимости, можно сопоставить каждому из возможных результатов вычислений конкретное значение, которое будет итоговым результатом (`ResultSwitch`).
+.. При необходимости можно сопоставить каждому из возможных результатов вычислений конкретное значение, которое будет итоговым результатом (`ResultSwitch`).
 
 Пример кода: xref:samples:use-api/create-view.adoc[Создание нового представления].
 
