Группы правильно назвал и переделал в атрибуты

--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.ValidateUser_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService.ValidateUser_MT.adoc
@@ -1,6 +1,6 @@
 = IStaffService.ValidateUser -- метод
 
-Проверяет вхождение текущего пользователя в доменную группу "Администраторы".
+Проверяет вхождение текущего пользователя в доменную группу *{dv-admins-serv}*.
 
 * *Пространство имён:* `xref:BackOffice-ObjectModel-Services-Entities:Services_NS.adoc[DocsVision.BackOffice.ObjectModel.Services]`
 * *Сборка:* `DocsVision.BackOffice.ObjectModel.dll`
