--- a/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IStaffService/pages/IStaffService_IN.adoc
@@ -149,5 +149,5 @@ public interface IStaffService
 |`xref:IStaffService.SynchronizeUnitWithActiveDirectory_MT.adoc[SynchronizeUnitWithActiveDirectory(StaffUnit, IADSynchronizationSettings, ILongProcessManager)]` |Синхронизирует данные подразделения _справочника сотрудников_ с Active Directory.
 |`xref:IStaffService.SynchronizeWithActiveDirectory_MT.adoc[SynchronizeWithActiveDirectory(IADSynchronizationSettings, ILongProcessManager)]` |Синхронизирует данные групп, ролей и подразделений _справочника сотрудников_ с Active Directory.
 |`xref:IStaffService.TransferEmployee_MT.adoc[TransferEmployee(StaffEmployee, StaffUnit, Boolean)]` |Переносит сотрудника в указанное подразделение.
-|`xref:IStaffService.ValidateUser_MT.adoc[ValidateUser]` |Проверяет вхождение текущего пользователя в доменную группу "Администраторы".
+|`xref:IStaffService.ValidateUser_MT.adoc[ValidateUser]` |Проверяет вхождение текущего пользователя в доменную группу {dv-admins-serv}.
 |===
