--- a/modules/solutions/pages/extensions/server-plugins.adoc
+++ b/modules/solutions/pages/extensions/server-plugins.adoc
@@ -8,7 +8,7 @@
 
 [NOTE]
 ====
-Атрибут `ExtensionMethod` имеет дополнительное свойство `AllowedUserRoles`, которое можно использовать для ограничения возможности вызова данного метода расширения в зависимости от роли пользователя (членства в соответствующей группе безопасности). Пример использования свойства (метод будет доступен только для членов группы _Docsvision Administrators_): `xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_1_CT.adoc[ExtensionMethod(UserRoles.Administrator)]`.
+Атрибут `ExtensionMethod` имеет дополнительное свойство `AllowedUserRoles`, которое можно использовать для ограничения возможности вызова данного метода расширения в зависимости от роли пользователя (членства в соответствующей группе безопасности). Пример использования свойства (метод будет доступен только для членов группы *{dv-admins-serv}*): `xref:Platform-StorageServer:Extensibility/ExtensionMethodAttribute_1_CT.adoc[ExtensionMethod(UserRoles.Administrator)]`.
 ====
 
 Пример кода реализации серверного расширения, где метод GetBaseName возвращает имя рабочей базы данных:
